@@ -12,12 +12,9 @@ public class LocationSearchEngine {
         if (locations == null || predicate == null) {
             throw new IllegalArgumentException("Параметры метода не могут быть null!");
         }
-        List<Location> copyLocations = new ArrayList<>(locations);
-        copyLocations.removeIf(predicate);
-        return copyLocations;
-//        return locations.stream()
-//                .filter(predicate)
-//                .collect(Collectors.toList());
+        return locations.stream()
+                .filter(predicate)
+                .toList();
     }
 
     public void processLocations(List<Location> locations, Consumer<Location> consumer) {
